@@ -5,6 +5,7 @@ import com.google.common.collect.Sets;
 import com.nio.bom.share.exception.BusinessException;
 import com.nio.bom.share.utils.LambdaUtil;
 import com.nio.ngfs.plm.bom.configuration.common.enums.ConfigErrorCode;
+import com.nio.ngfs.plm.bom.configuration.domain.model.oxo.enums.OxoPackageInfoEnum;
 import com.nio.ngfs.plm.bom.configuration.domain.model.oxofeatureoption.OxoFeatureOptionAggr;
 import com.nio.ngfs.plm.bom.configuration.domain.model.oxofeatureoption.OxoFeatureOptionRepository;
 import com.nio.ngfs.plm.bom.configuration.domain.model.oxooptionpackage.OxoOptionPackageAggr;
@@ -13,6 +14,7 @@ import com.nio.ngfs.plm.bom.configuration.domain.service.oxo.OxoFeatureOptionDom
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -76,37 +78,42 @@ public class OxoFeatureOptionDomainServiceImpl implements OxoFeatureOptionDomain
 
     @Override
     public List<OxoOptionPackageAggr> filter(List<OxoOptionPackageAggr> points, List<OxoFeatureOptionAggr> driveHandRegionSalesVersionRows) {
-        List<Long> repeatRows = driveHandRegionSalesVersionRows.stream().map(row-> row.getId()).collect(Collectors.toList());
-        return points.stream().filter(point-> !repeatRows.contains(point.getFeatureOptionId())).toList();
+        List<Long> repeatRows = driveHandRegionSalesVersionRows.stream().map(row -> row.getId()).collect(Collectors.toList());
+        return points.stream().filter(point -> !repeatRows.contains(point.getFeatureOptionId())).toList();
     }
 
+
+    /**
+     * OXO中是否存在
+     * 在所有Base Vehicle下打点都为“-”的Option（通过Delete Code删除的Option排除在外）
+     */
     @Override
     public List<String> checkOxoBasicVehicleOptions(String modelCode) {
 
-        List<OxoFeatureOptionAggr> oxoFeatureOptionAggrs=
+        List<OxoFeatureOptionAggr> oxoFeatureOptionAggrs =
                 oxoFeatureOptionRepository.queryFeatureListsByModelAndSortDelete(modelCode);
 
-        if(CollectionUtils.isEmpty(oxoFeatureOptionAggrs)){
+        if (CollectionUtils.isEmpty(oxoFeatureOptionAggrs)) {
             return Lists.newArrayList();
         }
 
         //行信息
-        List<Long> rowIds =oxoFeatureOptionAggrs.stream().map(OxoFeatureOptionAggr::getId).distinct().toList();
+        List<Long> rowIds = oxoFeatureOptionAggrs.stream().map(OxoFeatureOptionAggr::getId).distinct().toList();
 
-       // 获取打点信息
+        // 获取打点信息
         List<OxoOptionPackageAggr> optionPackages = oxoOptionPackageRepository.queryByBaseVehicleIds(rowIds);
 
+        List<String> optionCodes = Lists.newArrayList();
 
-
-        optionPackages.forEach(x->{
-
-
+        optionPackages.stream().collect(Collectors.groupingBy(OxoOptionPackageAggr::getFeatureOptionId)).forEach((k, v) -> {
+            if (v.stream().allMatch(x -> StringUtils.equals(x.getPackageCode(), OxoPackageInfoEnum.UNAVAILABLE.getCode()))) {
+                optionCodes.add(
+                        oxoFeatureOptionAggrs.stream().filter(x -> Objects.equals(x.getId(), k))
+                                .findFirst().orElse(new OxoFeatureOptionAggr()).getFeatureCode());
+            }
         });
 
-
-
-
-        return null;
+        return optionCodes;
     }
 
 }
